fix for css on ie6
git-svn-id: file:///raid/svn-personal/koakuma/trunk@25 219d0f9c-2d94-d447-890a-813e76b88fe9

--- a/Static/style.css
+++ b/Static/style.css
@@ -97,5 +97,6 @@ a:visited {
 }
 
 pre {
-	overflow-x: scroll;
+	overflow: scroll;
+	width: 100%;
 }
